# salve

./: .devcontainer.json  .gitignore  .travis.yml  CHANGELOG.markdown  CHANGELOG.md  README.markdown  README.md  compose.yaml  package.yaml  salve.cabal  stack.yaml
.github/workflows/: ci.yaml  ci.yml  workflow.yaml
benchmarks/: benchmark.hs
source/test-suite/: Main.hs
src/test/: Main.hs
tests/: Main.hs  doctest.hs
