name: salve
version: 1.0.9

synopsis: Semantic version numbers and constraints.
description:
  Salve provides semantic version (SemVer) numbers and constraints (ranges).

build-type: Simple
cabal-version: >= 1.10
category: Distribution
extra-source-files: README.markdown
license-file: LICENSE.markdown
license: MIT
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/salve
  type: git

library
  build-depends:
    base >= 4.9.0 && < 4.15
  default-language: Haskell98
  exposed-modules:
    Salve
    Salve.Internal
  hs-source-dirs: src/lib
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-safe
    -Wno-unsafe

  if impl(ghc >= 8.8)
    ghc-options:
      -Wno-missing-deriving-strategies

  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module

test-suite doctest
  build-depends:
    base -any
    , HUnit >= 1.6.0 && < 1.7
    , salve -any
  default-language: Haskell2010
  hs-source-dirs: src/test
  main-is: Main.hs
  type: exitcode-stdio-1.0
